# Dolphin

./: MODAL_DEPLOYMENT_PLAN.md  README.md  dolphin_cli.py  json_to_tts.py  pyproject.toml  storybook_parser.py  test_api.py  test_output.json  wizard_oz_output.json  wizard_storybook.json
dolphin_modal_app/: dolphin_modal.py
dolphin_modal_app/web/: index.html
modal/: README.md  __init__.py  dolphin_modal.py  setup.sh
modal/web/: app.js  styles.css
scripts/: setup_uv.sh
utils/: __init__.py
